dodano bootstrapa oraz fabryki

--- a/car-sharing-web-app/src/app/car-sharing-base/home/home.component.html
+++ b/car-sharing-web-app/src/app/car-sharing-base/home/home.component.html
@@ -1,13 +1,13 @@
 <p>home page</p>
 
-<div>
+<div class="panel panel-primary">
     <app-loan-header></app-loan-header>
 </div>
 
-<div>
+<div class="panel-body">
     <router-outlet></router-outlet>
 </div>
 
-<div>
+<div class="panel-footer">
     <app-loan-footer></app-loan-footer>
 </div>
