--- a/car-sharing-web-app/src/app/car-sharing-base/navigation-bar/navigation-bar.component.html
+++ b/car-sharing-web-app/src/app/car-sharing-base/navigation-bar/navigation-bar.component.html
@@ -1,11 +1,8 @@
-<p>navigation-bar works!</p>
-<div class="row">
-    <!--todo bootstrap styling for navbar-->
-    <div class="col">
-        <a routerLink="/loan-desktop" routerLinkActive="active">desktop</a>
-        <a routerLink="/cars-list" routerLinkActive="active">lista samochodów</a>
-        <a routerLink="/clients-list" routerLinkActive="active">lista klientów</a>
-        <a routerLink="/loan-list" routerLinkActive="active">lista wypożyczeń</a>
-        <a routerLink="/loan-form" routerLinkActive="active">nowe wypożyczenie</a>
-    </div>
-</div>
+
+   <nav class="navbar navbar-default">
+                <button class=""><a routerLink="/loan-desktop" routerLinkActive="active">desktop</a></button>
+                <a routerLink="/cars-list" routerLinkActive="active">lista samochodów</a>
+                <a routerLink="/clients-list" routerLinkActive="active">lista klientów</a>
+                <a routerLink="/loan-list" routerLinkActive="active">lista wypożyczeń</a>
+                <a routerLink="/loan-form" routerLinkActive="active">nowe wypożyczenie</a>
+   </nav>
