--- a/car-sharing-web-app/src/app/car-sharing-base/navigation-bar/navigation-bar.component.html
+++ b/car-sharing-web-app/src/app/car-sharing-base/navigation-bar/navigation-bar.component.html
@@ -1,8 +1,8 @@
 
-   <nav class="navbar navbar-default">
+    <div class="navbar">
                 <button class=""><a routerLink="/loan-desktop" routerLinkActive="active">desktop</a></button>
                 <a routerLink="/cars-list" routerLinkActive="active">lista samochodów</a>
                 <a routerLink="/clients-list" routerLinkActive="active">lista klientów</a>
                 <a routerLink="/loan-list" routerLinkActive="active">lista wypożyczeń</a>
                 <a routerLink="/loan-form" routerLinkActive="active">nowe wypożyczenie</a>
-   </nav>
+    </div>
