dodano angular datatables

--- a/car-sharing-web-app/src/app/car-sharing-base/cars-list/cars-list.component.html
+++ b/car-sharing-web-app/src/app/car-sharing-base/cars-list/cars-list.component.html
@@ -1,1 +1,5 @@
 <p>cars-list works!</p>
+
+<table datatable [dtOptions]="dtOptions"
+                 [dtTrigger]="dtTrigger"
+                 class="row-border hover"></table>
