dodano stylizacje przycisków oraz wyrównanie tekstu

--- a/car-sharing-web-app/src/app/car-sharing-base/navigation-bar/navigation-bar.component.html
+++ b/car-sharing-web-app/src/app/car-sharing-base/navigation-bar/navigation-bar.component.html
@@ -1,8 +1,8 @@
 
     <div class="navbar">
-                <button class=""><a routerLink="/loan-desktop" routerLinkActive="active">desktop</a></button>
-                <a routerLink="/cars-list" routerLinkActive="active">lista samochodów</a>
-                <a routerLink="/clients-list" routerLinkActive="active">lista klientów</a>
-                <a routerLink="/loan-list" routerLinkActive="active">lista wypożyczeń</a>
-                <a routerLink="/loan-form" routerLinkActive="active">nowe wypożyczenie</a>
+                <button class="btn btn-info" routerLink="/loan-desktop">desktop</button>
+                <button class="btn btn-info" routerLink="/cars-list">lista samochodów</button>
+                <button class="btn btn-info" routerLink="/clients-list">lista klientów</button>
+                <button class="btn btn-info" routerLink="/loan-list">lista wypożyczeń</button>
+                <button class="btn btn-info" routerLink="/loan-form">nowe wypożyczenie</button>
     </div>
