--- a/car-sharing-web-app/src/app/car-sharing-base/home/home.component.html
+++ b/car-sharing-web-app/src/app/car-sharing-base/home/home.component.html
@@ -1,6 +1,4 @@
-<p>home page</p>
-
-<div class="panel panel-primary">
+<div class="panel panel-primary text-center">
     <app-loan-header></app-loan-header>
 </div>
 
@@ -8,6 +6,6 @@
     <router-outlet></router-outlet>
 </div>
 
-<div class="panel-footer">
+<div class="panel-footer text-center">
     <app-loan-footer></app-loan-footer>
 </div>
