--- a/car-sharing-web-app/src/app/car-sharing-base/cars-list/cars-list.component.html
+++ b/car-sharing-web-app/src/app/car-sharing-base/cars-list/cars-list.component.html
@@ -1,30 +1,29 @@
-<p>cars-list works!</p>
 
-<table class="table table-bordered">
-    <thead class="table table-dark">
-        <tr>
-            <th>index</th>
-            <th>type</th>
-            <th>registration number</th>
-            <th>color</th>
-            <th>car mileage in kilometers</th>
-            <th>seats</th>
-            <th>power</th>
-            <th>weight</th>
-            <th>air conditioning</th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr *ngFor="let vehicle of vehicleList; index as i">
-            <td>{{i+1}}</td>
-            <td>{{vehicle.type}}</td>
-            <td>{{vehicle.registration_number}}</td>
-            <td>{{vehicle.color}}</td>
-            <td>{{vehicle.car_mileage_in_kilometers}}</td>
-            <td>{{vehicle.seats}}</td>
-            <td>{{vehicle.power}}</td>
-            <td>{{vehicle.weight}}</td>
-            <td>{{vehicle.hasAirConditioning}}</td>
-        </tr>
-    </tbody>
-</table>
+<div class="table-wrapper-scroll-y my-custom-scrollbar">
+    <table class="table table-hover table-bordered table-striped mb-0 " >
+        <thead>
+            <tr class="bg-dark text-white">
+                <th>index</th>
+                <th>type</th>
+                <th>registration number</th>
+                <th>color</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr *ngFor="let vehicle of vehicleList; index as i" (mouseover)="onClickedRow(i)" >
+                <td>{{i+1}}</td>
+                <td>{{vehicle.type}}</td>
+                <td>{{vehicle.registration_number}}</td>
+                <td>{{vehicle.color}}</td>
+            </tr>
+        </tbody>
+        <tfoot>
+            <tr>
+                <th>index</th>
+                <th>type</th>
+                <th>registration number</th>
+                <th>color</th>
+            </tr>
+        </tfoot>
+    </table>
+</div>
