--- a/car-sharing-web-app/src/app/car-sharing-base/navigation-bar/navigation-bar.component.html
+++ b/car-sharing-web-app/src/app/car-sharing-base/navigation-bar/navigation-bar.component.html
@@ -1,7 +1,7 @@
 
     <div class="navbar">
                 <button class="btn btn-info" routerLink="/loan-desktop">desktop</button>
-                <button class="btn btn-info" routerLink="/cars-list">lista samochodów</button>
+                <button class="btn btn-info" routerLink="/cars-overview">przeglądarka samochodów</button>
                 <button class="btn btn-info" routerLink="/clients-list">lista klientów</button>
                 <button class="btn btn-info" routerLink="/loan-list">lista wypożyczeń</button>
                 <button class="btn btn-info" routerLink="/loan-form">nowe wypożyczenie</button>
