dodano szczegóły komponentów Bus Motorcycle PassengerCar oraz Truck, dodano wyświetlanie szczegółów odpowiednio do typu pojazdu

--- a/car-sharing-web-app/src/app/car-sharing-base/motorcycle-details/motorcycle-details.component.html
+++ b/car-sharing-web-app/src/app/car-sharing-base/motorcycle-details/motorcycle-details.component.html
@@ -1,1 +1,3 @@
-<p>motorcycle-details works!</p>
+<li>has trunk: <b>{{motorcycle.hasTrunk}}</b></li>
+<li>has movable splasher: <b>{{motorcycle.hasMovableSplasher}}</b></li>
+<li>has has gearbox: <b>{{motorcycle.hasGearBox}}</b></li>
