--- a/car-sharing-web-app/src/app/car-sharing-base/passenger-details/passenger-details.component.html
+++ b/car-sharing-web-app/src/app/car-sharing-base/passenger-details/passenger-details.component.html
@@ -1,1 +1,2 @@
-<p>passenger-details works!</p>
+<li>has GPS: <b>{{passengerCar.hasGPS}}</b></li>
+<li>has multimedia system: <b>{{passengerCar.hasMultimediaSystem}}</b></li>
