--- a/car-sharing-web-app/src/app/car-sharing-base/truck-details/truck-details.component.html
+++ b/car-sharing-web-app/src/app/car-sharing-base/truck-details/truck-details.component.html
@@ -1,1 +1,3 @@
-<p>truck-details works!</p>
+<li>has bedroom: <b>{{truck.hasBedroom}}</b></li>
+<li>has CB radio: <b>{{truck.hasCBRadio}}</b></li>
+<li>max load: <b>{{truck.maxLoad}}</b> tons</li>
