--- a/car-sharing-web-app/src/app/car-sharing-base/car-details/car-details.component.html
+++ b/car-sharing-web-app/src/app/car-sharing-base/car-details/car-details.component.html
@@ -1,23 +1,27 @@
-
-
 <table class="table table-bordered">
-        <thead class="table table-dark">
-            <tr>
-                <th>vehicle details</th>
-            </tr>
-        </thead>
-        <tbody>
-                <div *ngIf="vehicle != null">
-                        <ul>
-                            <li>type: <b>{{vehicle.type}}</b></li>
-                            <li>registration number: <b>{{vehicle.registration_number}}</b></li>
-                            <li>color: <b>{{vehicle.color}}</b></li>
-                            <li>car mileage: <b>{{vehicle.car_mileage_in_kilometers}}</b> kilometers</li>
-                            <li>number of seats: <b>{{vehicle.seats}}</b></li>
-                            <li>power: <b>{{vehicle.power}}</b> horse power</li>
-                            <li>weight: <b>{{vehicle.weight}}</b> kilograms</li>
-                            <li>has air conditioning: <b>{{vehicle.hasAirConditioning}}</b></li>
-                        </ul>
-                    </div>
-        </tbody>
-    </table>
+    <thead class="table table-dark">
+        <tr>
+            <th>vehicle details</th>
+        </tr>
+    </thead>
+    <tbody>
+        <div *ngIf="vehicle != null">
+            <ul>
+                <li>type: <b>{{vehicle.type}}</b></li>
+                <li>registration number: <b>{{vehicle.registration_number}}</b></li>
+                <li>color: <b>{{vehicle.color}}</b></li>
+                <li>car mileage: <b>{{vehicle.car_mileage_in_kilometers}}</b> kilometers</li>
+                <li>number of seats: <b>{{vehicle.seats}}</b></li>
+                <li>power: <b>{{vehicle.power}}</b> horse power</li>
+                <li>weight: <b>{{vehicle.weight}}</b> kilograms</li>
+                <li>has air conditioning: <b>{{vehicle.hasAirConditioning}}</b></li>
+                <div [ngSwitch]="vehicle.type">
+                    <app-bus-details *ngSwitchCase="'Bus'" [bus]="vehicle"></app-bus-details>
+                    <app-motorcycle-details *ngSwitchCase="'Motorcycle'" [motorcycle]="vehicle"></app-motorcycle-details>
+                    <app-passenger-details *ngSwitchCase="'PassengerCar'" [passengerCar]="vehicle"></app-passenger-details>
+                    <app-truck-details *ngSwitchCase="'Truck'" [truck]="vehicle"></app-truck-details>
+                </div>
+            </ul>
+        </div>
+    </tbody>
+</table>
