dodano komponent cennika oraz lista przyczepek, poprawiono błędy

--- a/car-sharing-web-app/src/app/car-sharing-base/car-details/car-details.component.html
+++ b/car-sharing-web-app/src/app/car-sharing-base/car-details/car-details.component.html
@@ -5,7 +5,8 @@
         </tr>
     </thead>
     <tbody>
-        <div *ngIf="vehicle != null" class="rounded" [ngClass]="{'brown': vehicle.type=='Bus',
+        <div *ngIf="vehicle != null" class="rounded"
+                                     [ngClass]="{'brown': vehicle.type=='Bus',
                                                  'blue': vehicle.type=='PassengerCar',
                                                  'yellow': vehicle.type=='Motorcycle',
                                                  'green': vehicle.type=='Truck'}">
