--- a/car-sharing-web-app/src/app/car-sharing-base/navigation-bar/navigation-bar.component.html
+++ b/car-sharing-web-app/src/app/car-sharing-base/navigation-bar/navigation-bar.component.html
@@ -2,7 +2,9 @@
     <div class="navbar">
                 <button class="btn btn-info" routerLink="/loan-desktop">desktop</button>
                 <button class="btn btn-info" routerLink="/cars-overview">przeglądarka samochodów</button>
+                <button class="btn btn-info" routerLink="/trailer-list">lista przyczepek</button>
                 <button class="btn btn-info" routerLink="/clients-list">lista klientów</button>
                 <button class="btn btn-info" routerLink="/loan-list">lista wypożyczeń</button>
+                <button class="btn btn-info" routerLink="/price-list">cennik</button>
                 <button class="btn btn-info" routerLink="/loan-form">nowe wypożyczenie</button>
     </div>
