--- a/car-sharing-web-app/src/app/car-sharing-base/price-list/price-list.component.html
+++ b/car-sharing-web-app/src/app/car-sharing-base/price-list/price-list.component.html
@@ -1,19 +1,21 @@
 <div class="table-wrapper-scroll-y my-custom-scrollbar">
-    <table class="table table-hover table-bordered table-striped mb-0 " >
+    <table class="table table-hover table-bordered table-striped mb-0 ">
         <thead>
             <tr class="bg-dark text-white">
                 <th>index</th>
                 <th>type</th>
                 <th>registration number</th>
                 <th>color</th>
+                <th>price(per 1 day)</th>
             </tr>
         </thead>
         <tbody>
-            <tr *ngFor="let vehicle of vehicleList; index as i" (mouseover)="onClickedRow(i)" >
+            <tr *ngFor="let vehicle of vehicleList; index as i" (mouseover)="onClickedRow(i)">
                 <td>{{i+1}}</td>
                 <td>{{vehicle.type}}</td>
                 <td>{{vehicle.registration_number}}</td>
                 <td>{{vehicle.color}}</td>
+                <td style="color: greenyellow">{{vehicle.lendCost}}</td>
             </tr>
         </tbody>
         <tfoot>
@@ -22,6 +24,7 @@
                 <th>type</th>
                 <th>registration number</th>
                 <th>color</th>
+                <th>price(per 1 day)</th>
             </tr>
         </tfoot>
     </table>
