--- a/car-sharing-web-app/src/app/car-sharing-base/car-details/car-details.component.scss
+++ b/car-sharing-web-app/src/app/car-sharing-base/car-details/car-details.component.scss
@@ -1,3 +1,13 @@
+.my-custom-scrollbar {
+    position: relative;
+    height: 260px;
+    overflow: auto;
+}
+
+.table-wrapper-scroll-y {
+    display: block;
+}
+
 .brown{
     background-color: rgb(199, 159, 159);
 }
