--- a/car-sharing-web-app/src/app/car-sharing-base/cars-overview/cars-overview.component.html
+++ b/car-sharing-web-app/src/app/car-sharing-base/cars-overview/cars-overview.component.html
@@ -3,18 +3,29 @@
         <app-cars-list (clickedVehicle)="onVehicleSelected($event)"></app-cars-list>
     </div>
     <div class="col">
-        <div *ngIf="!editButtonClicked">
-            <div *ngIf="selectedVehicle != null">
-                <app-car-details [vehicle]="selectedVehicle"></app-car-details>
+        <div *ngIf="!newButtonClicked">
+            <div *ngIf="!editButtonClicked">
+                <div *ngIf="selectedVehicle != null">
+                    <app-car-details [vehicle]="selectedVehicle"></app-car-details>
+                </div>
+            </div>
+            <div *ngIf="editButtonClicked">
+                <app-car-form [selectedVehicle]="selectedVehicle" (changesSubmitted)="changesSubmitted($event)">
+                </app-car-form>
             </div>
         </div>
-        <div *ngIf="editButtonClicked">
-            <app-car-form [selectedVehicle]="selectedVehicle" (changesSubmitted)="changesSubmitted($event)"></app-car-form>
+        <div *ngIf="newButtonClicked">
+            <!--choosing type of new vehicle-->
+            <input type="radio" name="vehicleType" [value]="busChosen">Bus<br>
+            <input type="radio" name="vehicleType">Motorcycle<br>
+            <input type="radio" name="vehicleType">Passenger Car<br>
+            <input type="radio" name="vehicleType">Truck<br>
+            <button class="btn btn-success"(click)="typeOfVehicleChosen()">submit</button>
         </div>
     </div>
 </div>
 <div class="row" style="margin-top: 2mm;">
-    <button class="btn btn-success" style="margin-left: 60%;">add new vehicle</button>
+    <button class="btn btn-success" style="margin-left: 60%;" (click)="addNewVehicle()">add new vehicle</button>
     <button class="btn btn-warning" style="margin-left: 10mm;" (click)="editSelectedVehicle()">edit</button>
     <button class="btn btn-danger" style="margin-left: 10mm;" (click)="deleteSelectedVehicle()">delete</button>
 </div>
