skończono możliwość edycji oraz dodawania każdego z typów pojazdu, naprawiono błędy

--- a/car-sharing-web-app/src/app/car-sharing-base/bus-form/bus-form.component.html
+++ b/car-sharing-web-app/src/app/car-sharing-base/bus-form/bus-form.component.html
@@ -1,9 +1,9 @@
 <li>
-    has toilet: <input class="rounded" [ngClass]="hasToilet" type="boolean" [(ngModel)]="draftCopyOfBus.hasToilet"
+    has toilet: <input class="rounded" [ngClass]="hasToilet_input_CSS_class" type="boolean" [(ngModel)]="draftCopyOfBus.hasToilet"
         requeired>
 </li>
 <li>
-    doors count: <input type="number" class="rounded" [ngClass]="doorsCount" type="boolean" [(ngModel)]="draftCopyOfBus.doorsCount"
+    doors count: <input type="number" class="rounded" [ngClass]="doorsCount_input_CSS_class" type="boolean" [(ngModel)]="draftCopyOfBus.doorsCount"
         required>
 </li>
-<button class="btn btn-success" (click)="submitChanges()">submit changes</button>
+<button class="btn btn-success" (click)="submitChanges()">confirm changes</button>
